...
                  ),
                  GestureDetector(
                    onTap: () {
                      context.go('/user/login');
                    },
                    child: const Text(
                      'Sign in',
                      style: TextStyle(
                        decoration: TextDecoration.underline,
                        color: Colors.white,
                        fontSize: 15,
                      ),
                    ),
                  ),
                ],
              ),
              const SizedBox(height: 50),
              AppButton(
                title: "Sign Up",
                width: 200,
                onPressed: () {
                  userRegisterNotifier.onRegisterWithEmailAndPasswordPressed();
                },
                textSize: 25,
                height: 60,
...
