...
          right: 0,
          child: Center(
            child: AppButton(
              onPressed: () {
                context.go('/registration');
              },
              title: 'Explore Now',
              width: 250,
              height: 70,
              textSize: 30,
            ),
          ),
        ),
...
