...
                        : newColor.bg,
                    onPressed: () {
                      roleNotifier.onUserClicked();
                    },
                  ),
                  AppButton(
                    title: "As a cinema",
                    width: 170,
                    buttonColor: roleState == const RoleState.cinema()
                        ? newColor.primary
                        : newColor.bg,
                    onPressed: () {
                      roleNotifier.onCinemaClicked();
...
